	* fs/binfs:  Move apps/builtin/binfs.c to fs/binfs/fs_binfs.c
	  CONFIG_APPS_BINDIR rename CONFIG_FS_BINFS
	* include/nuttx/binfmt/builtin.h:  Some of the content of
	  apps/include/apps.h moved to include/nuttx/binfmt/builtin.h
	* binfmt/libbuiltin/libbuiltin_utils.c:  Move utility builtin
	  utility functions from apps/builtin/exec_builtins.c to
	  binfmt/libbuiltin/libbuiltin_utils.c
	* binfmt/builtin.c and binfmt/libbuiltin:  Add a binary "loader"
	  that can be used to execute builtin programs from the BINFS
	  file system.
	* configs/sim/nsh: Convert to use kconfig-frontends configuration
	  tool.
	* binfmt/binfmt_schedunload.c:  Add logic based on SIGCHLD to
	  automatically unload and clean-up after running a task that
	  was loaded into memory.
	* binfmt/libbuiltin: Extensions from Mike Smith
	* sched/task_reparent.c:  Add internal interface to change the
	  parent task.
	* sched/task_posixspawn():  Move libc/spawn/lib_ps.c to
	  sched/task_posixspawn() now it requires internal, reparenting
	  interfaces
	* include/nuttx/spawn():  Move libc/spawn.h to include/nuttx/spawn.h
	* arch/arm/include/lpc17xx/chip.h, irq178x.h:  Integrate Marcelo
	  Rommel's LPC1788 definitions into the base LPC17xx.
	* configs/olimex-lpc1766stk/nsh:  Convert configuration to use
	  the kconfig-frontends tools.
	* sched/task_reparent.c:  Simplify reparenting interface.
	* arch/arm/src/[many]: More LPC1788 definitions from Rommel
	  Marcelo incorporated.
	* configs/open1788:  Board configuration for the Wave Share
	  Open1788 board.  Still fragmentary (contribnuted by Rommel
	  Marcelo, adapted to use kconfig-frontends.
	* net/send():  Add logic to work around delayed ACKs by splitting
	  packets (contributed by Yan T.).
	* net/recvfrom():  Fix a bug.  When the host closes a connection
	  (gracefully).  recv[from]() returned success and the closure
	  was never detected.  Hmmm.. I don't know why the network monitor
	  did not catch this event.  This is an important bug fix.